#1699 | Project Import | Project Import & Refresh 3.0
- extracted boolean properties to ProjectImportContext.kt
- cleanup project descriptor after import
- apply project import settings on refresh
- apply application import settings on refresh
- cleanup after refresh
- removed open support interface
- introduced refresh context
- always create new import descriptor on import/refresh
- new refresh dialog
- conditional removal of the previous modules (may improve refresh and lead to some unexpected behavior or expected)
- changelog
- moved Project Import settings to `[y] SAP CX` configuration view
- unified settings
- improved refresh dialog
- new cleanup logic and conditional modules disposal
- new project settings
- combined application settings
- unified UI
- persist refresh project settings
- extracted already open modules logic
- expand open modules with submodules
- to be done -> reconfigure open modules, but partially -> identify what actually can be updated during the import...
- decouple root step ui
- unified texts
- adjusted settings
- moved custom dsl to shared module
- dropped strange sourceZipUsed flag
- regrouped settings
- used `commentRight` for additional details in DSL, like timeout scale
- dbdriver directory
- regrouped settings
- adjusted dependencies
- ui
- application settings configurator
- cleanup
- regrouped ui
- settings
- ui
- add `gensrc` for libs:
 - Backoffice Classes
 - Addon's Target Classes
 - server
 - compiler output
- extracted `localextensions` and `config` processor/scanner
- `rootProjectDescriptor` -> `projectDescriptor`
- moved logic outside the `DefaultHybrisProjectDescriptor`
- use PathExpand instead of the `guessProjectDir`
- added modules processor
- added modules scanner
- added config module descriptor lookup
- `rootProjectDescriptor` -> `projectDescriptor`
- moved logic outside the `DefaultHybrisProjectDescriptor`
- use PathExpand instead of the `guessProjectDir`
- new ApplicationSettingsConfigurator.kt
- added modules p